[gd_scene load_steps=6 format=3 uid="uid://cr8xh3kc8woma"]

[ext_resource type="Script" uid="uid://boqf6jng2krek" path="res://Game.gd" id="1_5f847"]
[ext_resource type="Texture2D" uid="uid://c2l8hdtcna76h" path="res://panda.png" id="1_6lbql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mshum"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ncuk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rcdn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5f847")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PettingCountLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="PandaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mshum")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3ncuk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4rcdn")
icon = ExtResource("1_6lbql")

[node name="PandaNameLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Name"
alignment = 1

[connection signal="pressed" from="VBoxContainer/PandaButton" to="." method="_on_panda_button_pressed"]
